--- a/Uno.html
+++ b/Uno.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en">
 
 <head>
 
@@ -17,15 +18,16 @@
 
 	</script>
 	<script src="https://use.fontawesome.com/26dcd763ac.js"></script>
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<script type="text/javascript" src="app.js"></script>
+	<link rel="stylesheet" type="text/css" href="style.css" async>
+	<script type="application/javascript" src="app.js" defer></script>
+	<script type="application/javascript" src="vendor.js" defer></script>
 </head>
 
-<body>
+<body >
 	<div class="container">
 		<div class="row" style="display:inline">
 			<h1 class="text-center" style="font-size: 6rem; color: red; font-weight: bold;">UNO Leadership Board</h1>
-			<button type="button" class="add-players" onClick="playerModal()">Add a player</button>
+			<button type="button" class="add-players" >Add a player</button>
 		</div>
 		<div class "row">
 			<div class=".table-responsive">
@@ -51,7 +53,7 @@
 </html>
 
 <!--Modal -->
-<div class="modal fade" tabindex="-1" id="playerModal" role="dialog">
+<div class="modal fade"  id="playerModal" role="dialog">
 	<div class="modal-dialog">
 		<!--Modal content-->
 		<div class="modal-content">
@@ -67,13 +69,13 @@
 				<form>
 					<div class="form-group">
 						<label for="PlayerName" style="color:black;">Player Name</label>
-						<input type="text" id="PlayerName" rows="1">
+						<input type="text" id="PlayerName" onfocus="this.value=''" rows="1">
 					</div>
 				</form>
 				<button class="btn btn-danger btn-lg" type="button" data-dismiss="modal">
 					<i class="fa fa-times"></i>
 					Close</button>
-				<button class="btn btn-success btn-lg" type="button" onclick="addPlayer()">
+				<button class="btn btn-success btn-lg" type="button" id="submitPlayer">
 					<i class="fa fa-check"></i>Add</button>
 			</div>
 		</div>
