added webpack to serve the site

--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
 
 	</script>
 	<script src="https://use.fontawesome.com/26dcd763ac.js"></script>
-	<link rel="stylesheet" type="text/css" href="style.css" async>
-	<script type="application/javascript" src="app.js" defer></script>
-	<script type="application/javascript" src="vendor.js" defer></script>
+	<link rel="stylesheet" type="text/css" href="assets/style.css" async>
+	<script type="application/javascript" src="assets/scripts/app.js" type="module" defer></script>
 </head>
 
 <body >
